--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,8 @@
             android:text="Aplicación de gestión de pedidos\nAUKDEFOOD"
             android:textAlignment="center"
             android:layout_margin="40dp"
-            android:textSize="20sp"
+            android:textSize="22sp"
+            android:fontFamily="@font/futura"
             android:textStyle="bold"
             />
 
@@ -44,6 +45,8 @@
                 android:layout_height="wrap_content"
                 android:backgroundTint="#5bbd00"
                 android:textColor="#FFFFFF"
+                android:fontFamily="@font/futura"
+                android:textStyle="bold"
                 android:layout_marginRight="5dp"
                 android:text="Aukdeliver"
                 />
@@ -56,6 +59,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
                 android:textColor="#ffffff"
+                android:fontFamily="@font/futura"
+                android:textStyle="bold"
                 android:backgroundTint="#5bbd00"
                 android:text="Proveedor"/>
 
@@ -68,6 +73,8 @@
                 android:backgroundTint="#5bbd00"
                 android:layout_marginLeft="5dp"
                 android:textColor="#ffffff"
+                android:fontFamily="@font/futura"
+                android:textStyle="bold"
                 android:layout_marginRight="5dp"
                 android:text="Admin"
                 />
