--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -86,6 +86,7 @@
 
         </RelativeLayout>
 
+
         <GridLayout
             android:columnCount="2"
             android:columnOrderPreserved="false"
@@ -94,92 +95,245 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_margin="10dp"
-                android:orientation="vertical"
-                android:gravity="center"
-                android:layout_height="match_parent">
+            <androidx.cardview.widget.CardView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
 
-                <Button
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="16sp"
-                    android:background="@drawable/notanredondo"
-                    android:layout_height="80dp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/futura"
-                    android:drawableLeft="@drawable/iconuser_admin"
-                    android:text="Mi perfil"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-                <Button
-                    android:id="@+id/btnHacerPedido"
+                    <Button
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:background="@drawable/btn_user"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Mi Perfil"
+                        android:fontFamily="@font/futura"
+                        android:textSize="16sp"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/futura"
-                    android:padding="10sp"
-                    android:drawableLeft="@drawable/order"
-                    android:background="@drawable/notanredondo"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="80dp"
-                    android:text="Hacer pedido"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-                <Button
-                    android:id="@+id/botnListaDePedidos"
+                    <RelativeLayout
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="80dp">
+
+                        <Button
+                            android:layout_width="80dp"
+                            android:gravity="center"
+                            android:id="@+id/btnHacerPedido"
+                            android:background="@drawable/btn_pedido"
+                            android:layout_height="80dp"/>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Hacer Pedido"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp">
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/futura"
-                    android:drawableLeft="@drawable/lista_admin"
-                    android:background="@drawable/notanredondo"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="80dp"
-                    android:text="Lista de pedidos"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-                <Button
-                    android:id="@+id/btnRegUsers"
+                    <Button
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:id="@+id/botnListaDePedidos"
+                        android:background="@drawable/btn_lista_pedidos"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Lista\nde Pedidos"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/futura"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:background="@drawable/notanredondo"
-                    android:layout_marginTop="10dp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/futura"
-                    android:textSize="16sp"
-                    android:drawableLeft="@drawable/lista_deliver"
-                    android:layout_height="80dp"
-                    android:text="Registrar usuarios"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-                <Button
+                    <RelativeLayout
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="80dp">
+
+                        <Button
+                            android:layout_width="80dp"
+                            android:gravity="center"
+                            android:id="@+id/btnRegUsers"
+                            android:background="@drawable/btn_reg_users"
+                            android:layout_height="80dp"/>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Registro\nde Usuarios"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/futura"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:background="@drawable/notanredondo"
-                    android:layout_marginTop="10dp"
-                    android:textSize="16sp"
-                    android:padding="10sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/futura"
-                    android:drawableLeft="@drawable/icono_mapa"
-                    android:layout_height="80dp"
-                    android:text="Mapa de proveedores"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-                <Button
+                    <Button
+                        android:layout_width="80dp"
+                        android:id="@+id/btnMonitoreoRepartidor"
+                        android:gravity="center"
+                        android:background="@drawable/btn_mapa"
+                        android:layout_height="80dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Mapa de\nProveedores"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/futura"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:background="@drawable/notanredondo"
-                    android:drawableLeft="@drawable/lista_users"
-                    android:layout_marginTop="10dp"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:fontFamily="@font/futura"
-                    android:layout_height="80dp"
-                    android:padding="10sp"
-                    android:text="Lista de usuarios"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-            </LinearLayout>
+                    <Button
+                        android:layout_width="80dp"
+                        android:id="@+id/btnDataMap"
+                        android:gravity="center"
+                        android:background="@drawable/btn_lista_usuarios"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Lista de\nUsuarios"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </GridLayout>
+
     </LinearLayout>
 </ScrollView>
