--- a/app/src/main/res/menu/popup_menu_estado.xml
+++ b/app/src/main/res/menu/popup_menu_estado.xml
@@ -7,7 +7,7 @@
     <item android:id="@+id/item2"
         android:title="Cancelado"/>
 
-    <item android:id="@+id/item3"
-        android:title="En espera"/>
+    <item android:id="@+id/item4"
+        android:title="Eliminar pedido"/>
 
 </menu>
