--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -114,6 +114,7 @@
 
                     <Button
                         android:layout_width="80dp"
+                        android:id="@+id/btnPerfil"
                         android:gravity="center"
                         android:background="@drawable/btn_user"
                         android:layout_height="80dp"/>
