--- a/app/src/main/res/layout/activity_menu_admin.xml
+++ b/app/src/main/res/layout/activity_menu_admin.xml
@@ -1,30 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/colornegrogradient"
+    android:orientation="vertical"
+    android:background="#fff"
     tools:context=".paquetes.Menus.MenuAdmin">
 
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_marginTop="6dp"
         android:layout_height="match_parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:orientation="horizontal"
+            android:background="@drawable/adminback"
+            android:layout_height="100dp">
 
         <RelativeLayout
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
+            android:layout_marginTop="7dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:id="@+id/txtEmail"
+                android:layout_marginTop="6dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/futura"
+                android:text="Administrador"
+                android:textColor="#fff">
+            </TextView>
 
                 <com.facebook.shimmer.ShimmerFrameLayout
                     android:layout_width="match_parent"
                     android:id="@+id/shimmer"
                     app:shimmer_duration="800"
+                    android:layout_below="@id/txtEmail"
                     android:layout_height="wrap_content">
 
                     <LinearLayout
@@ -57,19 +76,7 @@
                     </LinearLayout>
                 </com.facebook.shimmer.ShimmerFrameLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:id="@+id/txtEmail"
-                android:layout_marginTop="6dp"
-                android:textStyle="bold"
-                android:fontFamily="@font/futura"
-                android:layout_below="@id/shimmer"
-                android:text="Administrador AukdeFood"
-                android:textColor="#fff">
 
-            </TextView>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_height="62dp"
@@ -85,7 +92,12 @@
                 />
 
         </RelativeLayout>
+        </LinearLayout>
 
+<ScrollView
+    android:layout_width="match_parent"
+
+    android:layout_height="wrap_content">
 
         <GridLayout
             android:columnCount="2"
@@ -110,6 +122,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#E4FFEF"
                     android:padding="16dp">
 
                     <Button
@@ -145,6 +158,7 @@
                 <LinearLayout
                     android:orientation="vertical"
                     android:layout_width="match_parent"
+                    android:background="#F9F9F9"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:padding="16dp">
@@ -192,6 +206,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#FFECE3"
                     android:padding="16dp">
 
                     <Button
@@ -230,6 +245,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#FFE3F6"
                     android:padding="16dp">
 
                     <RelativeLayout
@@ -275,14 +291,91 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#FFFAF1"
                     android:padding="16dp">
 
                     <Button
                         android:layout_width="80dp"
                         android:id="@+id/btnMonitoreoRepartidor"
                         android:gravity="center"
+                        android:background="@drawable/btn_monitoreo"
+                        android:layout_height="80dp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Monitoreo"
+                        android:textSize="16sp"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:fontFamily="@font/futura"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#FFFFFF"
+                    android:padding="16dp">
+
+                    <Button
+                        android:layout_width="80dp"
+                        android:id="@+id/btnFinanzas"
+                        android:gravity="center"
+                        android:background="@drawable/btn_finanzas"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Finanzas"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#E3F8FF"
+                    android:padding="16dp">
+
+                    <Button
+                        android:layout_width="80dp"
+                        android:gravity="center"
                         android:background="@drawable/btn_mapa"
                         android:layout_height="80dp"/>
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_marginBottom="12dp"
@@ -312,11 +405,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:background="#E3EAFF"
                     android:padding="16dp">
 
                     <Button
                         android:layout_width="80dp"
-                        android:id="@+id/btnDataMap"
                         android:gravity="center"
                         android:background="@drawable/btn_lista_usuarios"
                         android:layout_height="80dp"/>
@@ -335,6 +428,6 @@
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
-
+     </ScrollView>
     </LinearLayout>
-</ScrollView>
+</LinearLayout>
