--- a/app/src/main/res/layout/activity_menu_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_menu_aukdeliver.xml
@@ -20,10 +20,23 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="22sp"
+                android:id="@+id/txtEmail"
+                android:layout_marginTop="6dp"
+                android:textStyle="bold"
+                android:fontFamily="@font/futura"
+                android:text="Aukdeliver"
+                android:textColor="#fff">
+            </TextView>
+
             <com.facebook.shimmer.ShimmerFrameLayout
                 android:layout_width="match_parent"
                 android:id="@+id/shimmer"
                 app:shimmer_duration="800"
+                android:layout_below="@id/txtEmail"
                 android:layout_height="wrap_content">
 
                 <LinearLayout
@@ -37,10 +50,10 @@
                         android:textSize="16sp"
                         android:id="@+id/txtNombres"
                         android:text=""
-                        android:fontFamily="@font/futura"
                         android:textStyle="bold"
+                        android:fontFamily="@font/futura"
                         android:textColor="#fff"
-                        android:layout_marginRight="5dp"
+                        android:layout_marginRight="3dp"
                         android:layout_height="wrap_content">
                     </TextView>
 
@@ -48,27 +61,15 @@
                         android:layout_width="wrap_content"
                         android:textSize="16sp"
                         android:id="@+id/txtApellidos"
-                        android:fontFamily="@font/futura"
                         android:textStyle="bold"
+                        android:fontFamily="@font/futura"
                         android:textColor="#fff"
                         android:layout_height="wrap_content">
                     </TextView>
                 </LinearLayout>
             </com.facebook.shimmer.ShimmerFrameLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:id="@+id/txtEmail"
-                android:layout_marginTop="6dp"
-                android:layout_below="@id/shimmer"
-                android:fontFamily="@font/futura"
-                android:textStyle="bold"
-                android:text="Usuario Aukdeliver"
-                android:textColor="#fff">
 
-            </TextView>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:layout_height="62dp"
@@ -81,7 +82,8 @@
                 android:foreground="@drawable/selecion"
                 android:layout_alignParentRight="true"
                 android:layout_width="62dp"
-                 />
+                />
+
 
         </RelativeLayout>
 
@@ -93,38 +95,89 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_margin="5dp"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
 
-                <Button
+            <androidx.cardview.widget.CardView
+                android:layout_width="90dp"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/futura"
-                    android:textStyle="bold"
-                    android:background="@drawable/notanredondo"
-                    android:layout_height="80dp"
-                    android:drawableLeft="@drawable/iconuser_admin"
-                    android:text="Mi perfil"/>
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:background="#F9F9F9"
+                    android:padding="16dp">
 
-                <Button
-                    android:id="@+id/btnListaPedidosAukdeliver"
+                    <Button
+                        android:layout_width="80dp"
+                        android:id="@+id/btnPerfil"
+                        android:gravity="center"
+                        android:background="@drawable/btn_user"
+                        android:layout_height="80dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Mi Perfil"
+                        android:fontFamily="@font/futura"
+                        android:textSize="16sp"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
+
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_columnWeight="1"
+                android:layout_rowWeight="1"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="12dp"
+                android:layout_margin="12dp"
+                >
+
+                <LinearLayout
+                    android:orientation="vertical"
                     android:layout_width="match_parent"
-                    android:backgroundTint="#fff"
-                    android:textSize="16sp"
-                    android:padding="10sp"
-                    android:fontFamily="@font/futura"
-                    android:textStyle="bold"
-                    android:drawableLeft="@drawable/lista_deliver"
-                    android:background="@drawable/notanredondo"
-                    android:layout_marginTop="10dp"
-                    android:layout_height="80dp"
-                    android:text="Lista de pedidos"/>
+                    android:background="#F9F9F9"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:padding="16dp">
 
-            </LinearLayout>
+                    <RelativeLayout
+                        android:layout_width="80dp"
+                        android:gravity="center"
+                        android:layout_height="80dp">
+
+                        <Button
+                            android:layout_width="80dp"
+                            android:gravity="center"
+                            android:id="@+id/btnListaPedidosAukdeliver"
+                            android:background="@drawable/btn_lista_pedidos"
+                            android:layout_height="80dp"/>
+
+                    </RelativeLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_marginBottom="12dp"
+                        android:text="Lista de Pedidos"
+                        android:textSize="16sp"
+                        android:fontFamily="@font/futura"
+                        android:textColor="#000000"
+                        android:layout_height="wrap_content"/>
+
+                </LinearLayout>
+
+            </androidx.cardview.widget.CardView>
 
         </GridLayout>
     </LinearLayout>
