--- a/app/src/main/res/layout/activity_perfil_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_perfil_aukdeliver.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".paquetes.Menus.Perfiles.PerfilAdmin">
+    tools:context=".paquetes.Menus.Perfiles.PerfilAukdeliver">
 
-    <include layout="@layout/toolbar2"/>
+    <include layout="@layout/toolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,17 +19,17 @@
             android:layout_width="match_parent"
             android:gravity="center|bottom"
             android:layout_height="wrap_content">
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_height="200dp"
-            android:id="@+id/myPhoto"
-            android:layout_gravity="center"
-            app:civ_border_color="#E7E7E7"
-            app:civ_border_width="2dp"
-            android:backgroundTint="#CACACA"
-            android:clickable="true"
-            android:background="@drawable/ic_admin"
-            android:foreground="@drawable/selecion"
-            android:layout_width="200dp" />
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:layout_height="200dp"
+                android:id="@+id/myPhoto"
+                android:layout_gravity="center"
+                app:civ_border_color="#E7E7E7"
+                app:civ_border_width="2dp"
+                android:backgroundTint="#CACACA"
+                android:clickable="true"
+                android:background="@drawable/ic_admin"
+                android:foreground="@drawable/selecion"
+                android:layout_width="200dp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/fotodefault"
