--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,9 +22,19 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="#000000"
-            android:text="Aplicación de gestión de pedidos\nAUKDEFOOD"
+            android:text="Aplicación de gestión de pedidos"
             android:textAlignment="center"
-            android:layout_margin="40dp"
+            android:layout_margin="10dp"
+            android:textSize="22sp"
+            android:fontFamily="@font/futura"
+            android:textStyle="bold"
+            />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="#000000"
+            android:text="AUKDEFOOD"
+            android:textAlignment="center"
             android:textSize="22sp"
             android:fontFamily="@font/futura"
             android:textStyle="bold"
