--- a/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_detalle_pedido_aukdeliver.xml
@@ -560,6 +560,13 @@
 
                 </LinearLayout>
 
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:id="@+id/pathPhoto"
+                    android:visibility="invisible"
+                    android:layout_height="0dp"
+                    />
+
                 <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="match_parent"
