--- a/app/src/main/res/layout/activity_menu_aukdeliver.xml
+++ b/app/src/main/res/layout/activity_menu_aukdeliver.xml
@@ -1,12 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:animateLayoutChanges="true"
     android:background="@drawable/colorverdergradient"
     tools:context=".paquetes.Menus.MenuAukdeliver">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:id="@+id/desconectado"
+        android:visibility="visible"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:src="@drawable/nowifi"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:padding="20dp"
+            android:textStyle="bold"
+            android:textSize="26dp"
+            android:textColor="#000"
+            android:fontFamily="@font/futura"
+            android:textAlignment="center"
+            android:text="Sin Conexión a Internet"
+            android:layout_height="wrap_content"/>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:id="@+id/restart"
+            android:textColor="#000"
+            android:onClick="restart"
+            android:text="Reintentar"
+            android:layout_height="wrap_content"/>
+
+    </LinearLayout>
 
     <LinearLayout
         android:orientation="vertical"
@@ -180,5 +215,9 @@
             </androidx.cardview.widget.CardView>
 
         </GridLayout>
-    </LinearLayout>
-</ScrollView>
+
+
+
+        </LinearLayout>
+
+</LinearLayout>
