--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -65,10 +65,10 @@
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/logContrasena"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Contraseña"
-                    android:id="@+id/logContrasena"
+                    android:hint="Contraseñaxxxx"
                     android:inputType="textPassword">
 
                 </com.google.android.material.textfield.TextInputEditText>
