--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -68,7 +68,7 @@
                     android:id="@+id/logContrasena"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Contraseñaxxxx"
+                    android:hint="Contraseña"
                     android:inputType="textPassword">
 
                 </com.google.android.material.textfield.TextInputEditText>
