--- a/app/src/main/res/layout/activity_registro_admin.xml
+++ b/app/src/main/res/layout/activity_registro_admin.xml
@@ -9,6 +9,11 @@
 
     <include layout="@layout/toolbar2"/>
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_marginTop="40dp"
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -17,7 +22,6 @@
         android:layout_marginLeft="10dp"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
         android:orientation="vertical">
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -230,9 +234,6 @@
                 android:backgroundTint="#000000"/>
 
         </LinearLayout>
-
-
-
     </LinearLayout>
-
+</ScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
