--- a/app/src/main/res/layout/activity_registro_proveedor.xml
+++ b/app/src/main/res/layout/activity_registro_proveedor.xml
@@ -274,6 +274,8 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_marginLeft="5dp"
+                    app:passwordToggleEnabled = "true"
+                    app:passwordToggleDrawable="@drawable/pass"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -298,6 +300,8 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_marginLeft="5dp"
+                    app:passwordToggleEnabled = "true"
+                    app:passwordToggleDrawable="@drawable/pass"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -322,6 +326,8 @@
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
                     android:layout_marginLeft="5dp"
+                    app:passwordToggleEnabled = "true"
+                    app:passwordToggleDrawable="@drawable/pass"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
