--- a/app/src/main/res/layout/activity_registro_admin.xml
+++ b/app/src/main/res/layout/activity_registro_admin.xml
@@ -155,6 +155,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_marginLeft="5dp"
+                app:passwordToggleEnabled = "true"
+                app:passwordToggleDrawable="@drawable/pass"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -179,6 +181,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_marginLeft="5dp"
+                app:passwordToggleEnabled = "true"
+                app:passwordToggleDrawable="@drawable/pass"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -203,6 +207,8 @@
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_marginLeft="5dp"
+                app:passwordToggleEnabled = "true"
+                app:passwordToggleDrawable="@drawable/pass"
                 android:layout_height="wrap_content">
 
                 <com.google.android.material.textfield.TextInputEditText
