--- a/app/src/main/res/layout/activity_registro_proveedor.xml
+++ b/app/src/main/res/layout/activity_registro_proveedor.xml
@@ -168,26 +168,42 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:orientation="horizontal"
                 android:layout_height="wrap_content">
+
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:src="@drawable/ic_categoria"/>
                 <com.google.android.material.textfield.TextInputLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_marginLeft="5dp"
+                    android:hint="Categoría"
+                    android:textColorHint="#000"
+                    android:textColor="#000"
                     android:layout_height="wrap_content">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:layout_width="match_parent"
+                        android:id="@+id/ProveedorCategoria"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:hint="Categoría"
-                        android:maxLength="20"
-                        android:id="@+id/ProveedorCategoria"
-                        android:inputType="text">
+                        android:inputType="text"
+                        android:textColorHint="#000"
+                        android:textColor="#000"
+                        android:maxLength="20">
 
                     </com.google.android.material.textfield.TextInputEditText>
                 </com.google.android.material.textfield.TextInputLayout>
+
+                <Spinner
+                    android:layout_width="wrap_content"
+                    android:id="@+id/spinnerFood"
+                    android:gravity="bottom"
+                    android:spinnerMode="dialog"
+                    android:layout_gravity="bottom"
+                    android:layout_height="wrap_content"/>
+
             </LinearLayout>
 
             <LinearLayout
